# Emotion-Detection

./: Main.py  app.py  detect.py  emotion.json  emotionmcp.py  index.html  pyproject.toml  readme.md  requirements.txt
